--- a/html/gunnar.html
+++ b/html/gunnar.html
@@ -5,14 +5,23 @@
     <title>Gunnar</title>
     <link rel="stylesheet" href="../css/master.css">
   </head>
-  <body class="lae-background ">
-    <div class="">
-      <button type="button" name="knapp1">
+  <body class="lae-background lae-flex">
+    <div style="">
+      <button type="button" name="knapp1" >
         <a href="main.html">Tilbake til main</a>
       </button>
       </div>
     <div class="">
       <p style="font-size: 50px;">Brødtekst</p>
+      <ul style="width: 100%; justify-content: right;">
+        <li>numbah 1</li>
+        <li>2rd</li>
+        <ol>
+          <li>3nd</li>
+          <li>4st</li>
+        </ol>
+      </ul>
     </div>
   </body>
 </html>
+<img src="" alt="">
