--- a/html/gunnar.html
+++ b/html/gunnar.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Gunnar</title>
-    <link rel="stylesheet" href="../css/master.css">
-  </head>
-  <body class="lae-background lae-flex">
-    <div style="">
-      <button type="button" name="knapp1" >
-        <a href="main.html">Tilbake til main</a>
-      </button>
-      </div>
-    <div class="">
-      <p style="font-size: 50px;">Brødtekst</p>
-      <ul style="width: 100%; justify-content: right;">
-        <li>numbah 1</li>
-        <li>2rd</li>
-        <ol>
-          <li>3nd</li>
-          <li>4st</li>
-        </ol>
+<head>
+  <meta charset="utf-8">
+  <title>Gunnar</title>
+  <link rel="stylesheet" href="../css/master.css">
+</head>
+<body class="lae-background lae-main lae-viewport">
+  <h1 class="lae-info"> <strong> Gunnar Lein Sandnes </strong></h1>
+  <div class="lae-air-r-05">
+    <button type="button" name="knapp1" style="float: right;" onclick="window.location.href='./main.html'" >Tilbake til main</button>
+  </div>
+  <br>
+  <br>
+  <div class="lae-air-r-05">
+    <img title="Secrets well hidden" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; float: right" alt="Personbilde" />
+  </div>
+    <h1><strong>Om meg</strong></h1>
+    <ul>
+      <li>26</li>
+      <li>Snåsning</li>
+      <li>Informasjonsteknologi ved HVL</li>
+      <li>Frontend erfaring</li>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Phoenix</li>
+        <li>ECTO</li>
+        <li>GIT</li>
       </ul>
-    </div>
-  </body>
+      <li>Liker å krangle på navnekonvensjoner og enkle metoder</li>
+      <li>Hobby-troubleshooter</li>
+    </ul>
+  <div class="lae-textbase">
+    <p>Sosiale medier inneholder sterke politiske meninger, så de inkluderes ikke</p>
+  </div>
+</body>
 </html>
-<img src="" alt="">
