--- a/html/gunnar.html
+++ b/html/gunnar.html
@@ -8,18 +8,18 @@
 <body class="lae-background lae-main lae-viewport">
   <h1 class="lae-info"> <strong> Gunnar Lein Sandnes </strong></h1>
   <div class="lae-air-r-05">
-    <button type="button" name="knapp1" style="float: right;" onclick="window.location.href='./main.html'" >Tilbake til main</button>
+    <button type="button" name="knapp1" style="float: right;" onclick="window.location.href='./ING102.html'" >Tilbake til main</button>
   </div>
   <br>
   <br>
   <div class="lae-air-r-05">
-    <img title="Secrets well hidden" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; float: right" alt="Personbilde" />
+    <img title="Liker å gjemme easter eggs" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; float: right" alt="Personbilde" />
   </div>
     <h1><strong>Om meg</strong></h1>
     <ul>
       <li>26</li>
       <li>Snåsning</li>
-      <li>Informasjonsteknologi ved HVL</li>
+      <li>Informasjonsteknologi ved HVL-F</li>
       <li>Frontend erfaring</li>
       <ul>
         <li>HTML</li>
@@ -29,7 +29,10 @@
         <li>GIT</li>
       </ul>
       <li>Liker å krangle på navnekonvensjoner og enkle metoder</li>
+      <li>Databaseallergi</li>
       <li>Hobby-troubleshooter</li>
+      <li>Tidligere musiker (forklarer håret)</li>
+      <li style="color: #F0F0F0"> Lat som få</li>
     </ul>
   <div class="lae-textbase">
     <p>Sosiale medier inneholder sterke politiske meninger, så de inkluderes ikke</p>
