--- a/html/Kevin.html
+++ b/html/Kevin.html
@@ -1,103 +1,96 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Mannen</title>
-    <style>
-    .hei {
-      position: relative;
-      text-align: center;
-      background-color: black;
+<head>
+  <meta charset="utf-8">
+  <title>Mannen</title>
+  <style>
+  .hei {
+    position: relative;
+    text-align: center;
+    background-color: black;
   }
 
-    table{border: 3px solid darkred; font-size: 25px; width: 50%;}
-    td{border: 1px solid black; font-size: 25px;  }
+  table{border: 3px solid darkred; font-size: 25px; width: 50%;}
+  td{border: 1px solid black; font-size: 25px;  }
+  li{font-size: 25px;}
+  </style>
+</head>
 
 
-  }
-
-    list class{border; font-size: 25px:}
-    li{border; font-size: 25px;}
-
-
-  }
-  }
-    </style>
-  </head>
-  <body style= "background-color: lightblue;">
-
-  <div><h1 style="color: darkred; font-size:70px" class="hei"> Kevin Eriksen </div>
-  <p style= "color: darkred; font-size:35px;"> Litt info om meg selv, og livet i Førde: </p>
-    <p style="font-size:18px; positon: absolute; width: 50%;">
-        Heisann! Jeg er en gutt på 20 år som kommer fra Oslo og har nylig flyttet til Førde for å studere IT.
-        Jeg er 183cm høy, har blå øyne og blondt hår.
-        Bor nå i en studentbolig bestående av 10 hybler på 10m2. Her bor det altså 9 andre bavianer. Fullt kaos.
-        Før jeg kom hit tok jeg et friår hvor jeg hadde en midlertidig fast stilling som lagermedarbeider, fram til sommeren 2019.
-        I tillegg jobbet jeg deltid i helgene, både som kurs- og konferansevert og som servitør på Thon Hotel.</p>
-    <p  style="font-size:18px; positon: absolute; width: 50%;">
+<body style= "background-color: lightblue;">
+  <div><h1 style="color: darkred; font-size:70px" class="hei"> Kevin Eriksen </h1>
+    <p style= "color: darkred; font-size:35px;"> Litt info om meg selv, og livet i Førde: </p>
+    <p style="font-size:18px;  width: 50%;">
+      Heisann! Jeg er en gutt på 20 år som kommer fra Oslo og har nylig flyttet til Førde for å studere IT.
+      Jeg er 183cm høy, har blå øyne og blondt hår.
+      Bor nå i en studentbolig bestående av 10 hybler på 10m2. Her bor det altså 9 andre bavianer. Fullt kaos.
+      Før jeg kom hit tok jeg et friår hvor jeg hadde en midlertidig fast stilling som lagermedarbeider, fram til sommeren 2019.
+      I tillegg jobbet jeg deltid i helgene, både som kurs- og konferansevert og som servitør på Thon Hotel.</p>
+      <p  style="font-size:18px; width: 50%;">
         Livet her i Førde har vært som en drøm så langt.
         Det er et utrolig godt student-miljø her, noe som gjør at jeg trives utrolig godt.
         Det er lett å få seg nye venner og sosiale arrangementer er det nok av.
         Når det gjelder skolen så går det veldig greit.
         Noen fag er så klart vanskeligere enn andre og tar lenger tid å komme inn i, men alt i alt så er det spennende å prøve seg på nye ting og artig når man får det til.
         Gleder meg til tiden fremover om vi ser bort i fra klesvasken:D</p>
-    </h1>
-<img border="10" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
-    style="position: absolute; height: 300px; width: 300px; right:9px; top:140px;">
-<img border="10" src="https://cdn.calciomercato.com/images/2019-04/ronaldo.juve.ok.smorfia.2018.19.356x237.jpg"
-    style="position: absolute; height: 220px; width: 220px; right:400px; top:650px;">
-<br>
-<h1 style= "color: darkred; font-size: 35px; "> Interesser: </h1>
-<table>
-    <td> AKTIVITETER </td>
-    <td> MAT </td>
-    <td> FAGLIG </td>
-  </tr>
-    <tr>
-      <td> 1. Fotball </td>
-      <td> 1. Taco </td>
-      <td> 1. IT </td>
-    </tr>
-      <tr>
-      <td> 2. Basketball </td>
-      <td> 2. Pizza </td>
-      <td> 2. Mattematikk </td>
-    </tr>
-      <tr>
-      <td> 3. Turn </td>
-      <td> 3. Sjømat </td>
-      <td> 3. Økonomi </td>
-    </tr>
-      <tr>
-      <td> 4. Friidrett </td>
-      <td> 4. Pasta </td>
-      <td> 4. Biologi </td>
-    </tr>
-      <tr>
-      <td> 5. Svømming </td>
-      <td> 5. Tandori </td>
-      <td> 5. Gym
-    </table>
-    <br>
-    <br>
-  <p style= "color:darkred; font-size:35px;"> Viktige ting jeg har i hybelen: </p>
-  <ul>
-  <list class>
-    <li> Bad </li>
-    <li> Seng </li>
-    <li> Klesskap </li>
-    <li> Kommode </li>
-    <li> Pult </li>
-    <li> Hyller </li>
-    <li> Playstation </li>
-    <li> Varmeovn </li>
-    <li> Skittentøyskurv </li>
-    <li> Søplekasse </li>
-  </list class>
+    </div>
+      <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
+      style="border: 15px solid black; position: absolute; height: 300px; width: 300px; right:9px; top:140px;">
+      <img alt="" src="https://cdn.calciomercato.com/images/2019-04/ronaldo.juve.ok.smorfia.2018.19.356x237.jpg"
+      style="border: 15px solid black; position: absolute; height: 220px; width: 220px; right:350px; top:630px;">
+      <br>
+      <h1 style= "color: darkred; font-size: 35px; "> Interesser: </h1>
 
-<br>
-<br>
-<p> <a href="ING102.html"> heiheihie</a> </p>
+      <table>
+        <tr>
+        <td> AKTIVITETER </td>
+        <td> MAT </td>
+        <td> FAGLIG </td>
+      </tr>
+      <tr>
+        <td> 1. Fotball </td>
+        <td> 1. Taco </td>
+        <td> 1. IT </td>
+      </tr>
+      <tr>
+        <td> 2. Basketball </td>
+        <td> 2. Pizza </td>
+        <td> 2. Mattematikk </td>
+      </tr>
+      <tr>
+        <td> 3. Turn </td>
+        <td> 3. Sjømat </td>
+        <td> 3. Økonomi </td>
+      </tr>
+      <tr>
+        <td> 4. Friidrett </td>
+        <td> 4. Pasta </td>
+        <td> 4. Biologi </td>
+      </tr>
+      <tr>
+        <td> 5. Svømming </td>
+        <td> 5. Tandori </td>
+        <td> 5. Gym
+        </table>
+        <br>
+        <br>
+        <p style= "color:darkred; font-size:35px;"> Viktige ting jeg har i hybelen: </p>
+        <ul>
+          <li> Bad </li>
+          <li> Seng </li>
+          <li> Klesskap </li>
+          <li> Kommode </li>
+          <li> Pult </li>
+          <li> Hyller </li>
+          <li> Playstation </li>
+          <li> Varmeovn </li>
+          <li> Skittentøyskurv </li>
+          <li> Søplekasse </li>
+        </ul>
 
-  </body>
-</html>
+          <br>
+          <br>
+          <p> <a href="main.html"> Tilbake til Main</a> </p>
+
+        </body>
+        </html>
