--- a/html/Thomas.html
+++ b/html/Thomas.html
@@ -19,10 +19,10 @@
       <li>Liker å være i aktivitet, blant annet å spille fotball</li>
       <li>Elsker programmering</li>
       </ul>
-      <img border="15" src="https://i.imgur.com/rmqEMrM.jpg"
+      <img src="https://i.imgur.com/rmqEMrM.jpg" alt=""
       style="position: absolute; height: 200px; width: 290px; right: 70px; bottom: 200px;">
       <p style="font-size: 18px">Om du ønsker å kontakte Thomas så kan du trykke på linken under:</p>
       <a   href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Facebook</a>
-      <p> <a   href="ING102.html">Tilbake til startsiden</a></p>
+      <p> <a   href="main.html">Tilbake til startsiden</a></p>
   </body>
 </html>
