--- a/html/main.html
+++ b/html/main.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Hovedside</title>
-  <link rel="stylesheet" href="/css/master.css">
-
-</head>
-<body class="lae-navbar">
-  <h1>Prosjektgruppe Førde 1</h1>
-  <p style="color: green"></p>
-  <div class="" style="left: 2em; ">
-    <a href="gunnar.html"><img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; width: 50px;" /></a>
-  </div>
+  <head>
+    <meta charset="utf-8">
+    <title>main</title>
+    	<style>
+        Body {background-color: black; }
+        h1 {color: pink; text-align:center;	}
+        p {color: red; text-align: center; font-family: "Courier";}
+        img {text-align: center; }
+        </style>
+  </head>
+  <body>
+<h1> Prosjekt gruppe 1 ULTIMATE </h1>
+<p> Gunnar- Langt hår, over gjennomsnittelig glad i kaffe. </p>
+<p> Thomas- Liker fotball, ikke programmering. </p>
+<p> Kevin- Sjef </p>
+<p> Sebastian- Er bare i Bergen </p>
+<p> Velkommen til den beste gruppen, bestående av fire idioter. Både Gunnar, Thomas, Sebastian og Kevin står framfor dere i dag og skal fortelle dere om det sykeste nettstedet for drivstoffpriser noen sinne. Men først… litt om oss.
+	<br>
+  <a target="_blank" href="gunnar.html"><img alt="" style="height: 200px; width: 150px" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/564340_462770663754568_750633099_n.jpg?_nc_cat=110&_nc_oc=AQnjSNlpacWZ1nmf8uWWLps1KZHO08C9dcluCaNoJbMoJaqvx9j5dpE5b3pPF0ga3Lk&_nc_ht=scontent-arn2-1.xx&oh=5d89041584d9c33226e2dabda3259988&oe=5E11CB65"></a>
+  <a href="#"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18157635_451948048492139_7961193018346921842_n.jpg?_nc_cat=104&_nc_oc=AQmn7GEvxe6vNrJUe7vDQEVeQUL9cx2JaxTncAtbwU6_2Ov7yGDPj-_j4_TqGjtCjI0&_nc_ht=scontent-arn2-1.xx&oh=e54feeb2c4621c679669d428ec3d1a2b&oe=5DCDB58C" style="height: 200px; width: 200px;"> </a>
   <br>
-
-
-  <div class="">
-    <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; width: 50px;" />
-    <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; width: 50px;" />
-  </div>
-<img src="" alt="">
-<a href="#"><img src="" alt=""></a>
+<a target="_blank" href="file:///Users/kevineriksen/Downloads/Thomas%20(1).html"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.15752-9/69873306_485105928975831_2105212730196623360_n.jpg?_nc_cat=105&_nc_oc=AQkenUIoparvwcOtPSMQAvv-uSp9hbW1AieJtquOzZ7chKDHRTkDYkmH2IyAlkrV2fo&_nc_ht=scontent-arn2-1.xx&oh=391b60f633059d54c629753d7a7ebae3&oe=5DCDF045"
+	style="height: 200px; width: 150px"> </a>
+<a target="_blank" href="Kevin.html"><img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
+	style="height: 200px; width: 200px;"> </a>
 </body>
 </html>
