--- a/html/main.html
+++ b/html/main.html
@@ -11,15 +11,15 @@
         </style>
   </head>
   <body>
-<h1> Prosjekt gruppe 1 ULTIMATE </h1>
-<p> Gunnar- Langt hår, over gjennomsnittelig glad i kaffe. </p>
-<p> Thomas- Liker fotball, ikke programmering. </p>
-<p> Kevin- Sjef </p>
-<p> Sebastian- Er bare i Bergen </p>
-<p> Velkommen til den beste gruppen, bestående av fire idioter. Både Gunnar, Thomas, Sebastian og Kevin står framfor dere i dag og skal fortelle dere om det sykeste nettstedet for drivstoffpriser noen sinne. Men først… litt om oss.
+<h1> Prosjekt gruppe 1 </h1>
+<p> Gunnar </p>
+<p> Thomas </p>
+<p> Kevin </p>
+<p> Sebastian </p>
+<p> Velkommen til prosjekt gruppe 1, bestående av 4 studenter fra Campus Førde. Her ser du bilder av alle oss som dere kan klikke dere inn på for mer informasjon om hver enkelt.
 	<br>
   <a target="_blank" href="gunnar.html"><img alt="" style="height: 200px; width: 150px" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/564340_462770663754568_750633099_n.jpg?_nc_cat=110&_nc_oc=AQnjSNlpacWZ1nmf8uWWLps1KZHO08C9dcluCaNoJbMoJaqvx9j5dpE5b3pPF0ga3Lk&_nc_ht=scontent-arn2-1.xx&oh=5d89041584d9c33226e2dabda3259988&oe=5E11CB65"></a>
-  <a href="#"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18157635_451948048492139_7961193018346921842_n.jpg?_nc_cat=104&_nc_oc=AQmn7GEvxe6vNrJUe7vDQEVeQUL9cx2JaxTncAtbwU6_2Ov7yGDPj-_j4_TqGjtCjI0&_nc_ht=scontent-arn2-1.xx&oh=e54feeb2c4621c679669d428ec3d1a2b&oe=5DCDB58C" style="height: 200px; width: 200px;"> </a>
+  <a href="Sebastian.html"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18157635_451948048492139_7961193018346921842_n.jpg?_nc_cat=104&_nc_oc=AQmn7GEvxe6vNrJUe7vDQEVeQUL9cx2JaxTncAtbwU6_2Ov7yGDPj-_j4_TqGjtCjI0&_nc_ht=scontent-arn2-1.xx&oh=e54feeb2c4621c679669d428ec3d1a2b&oe=5DCDB58C" style="height: 200px; width: 200px;"> </a>
   <br>
 <a target="_blank" href="file:///Users/kevineriksen/Downloads/Thomas%20(1).html"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.15752-9/69873306_485105928975831_2105212730196623360_n.jpg?_nc_cat=105&_nc_oc=AQkenUIoparvwcOtPSMQAvv-uSp9hbW1AieJtquOzZ7chKDHRTkDYkmH2IyAlkrV2fo&_nc_ht=scontent-arn2-1.xx&oh=391b60f633059d54c629753d7a7ebae3&oe=5DCDF045"
 	style="height: 200px; width: 150px"> </a>
