Check Andrevv.com

--- a/html/Kevin.html
+++ b/html/Kevin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kevin</title>
+  <link rel="stylesheet" href="../css/master.css">
   <style>
   .hei {
     position: relative;
@@ -93,4 +94,5 @@
           <p> <a href="main.html"> Tilbake til Main</a> </p>
 
         </body>
+        <script src="../js/master.js"></script>
         </html>
