--- a/html/Thomas.html
+++ b/html/Thomas.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Han smarte fyren</title>
+    <link rel="stylesheet" href="../css/master.css">
     <style media="screen">
       li{
         font-size: 30px;
@@ -25,4 +26,5 @@
       <a href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Facebook</a>
       <p> <a href="main.html">Tilbake til startsiden</a></p>
   </body>
+  <script src="../js/master.js"></script>
 </html>
