--- a/html/main.html
+++ b/html/main.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/master.css">
     <title>main</title>
     	<style>
         Body {background-color: black; }
@@ -26,4 +27,5 @@
 <a target="_blank" href="Kevin.html"><img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
 	style="height: 200px; width: 200px;"> </a>
 </body>
+<script src="../js/master.js"></script>
 </html>
