--- a/html/Sebastian.html
+++ b/html/Sebastian.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="meg.css">
+    <link rel="stylesheet" href="../css/master.css">
   </head>
   <body>
     <h1>Hei mitt navn er Sebastian Bjoland</h1>
@@ -19,4 +19,5 @@
 </table>
 
   </body>
+  <script src="../js/master.js"></script>
 </html>
