--- a/html/gunnar.html
+++ b/html/gunnar.html
@@ -5,14 +5,16 @@
   <title>Gunnar</title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
-<body class="background main viewport background-wallpaper">
-    <h1 class="info"> <strong> Gunnar Lein Sandnes </strong></h1>
+<body class="background main viewport">
+<nav class="navbar">
+  <h1 class="info"> <strong id="hover"> Gunnar Lein Sandnes </strong></h1>
+</nav>
   <div class="air-r-05">
     <button type="button" name="knapp1" style="float: right;" onclick="window.location.href='./main.html'" >Tilbake til main</button>
   </div>
   <br>
   <br>
-  <div class="air-r-05 container">
+  <div class="air-r-05 shadow ">
     <img title="Liker å gjemme easter eggs" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; float: right" alt="Personbilde" />
   </div>
     <h1><strong>Om meg</strong></h1>
@@ -38,4 +40,5 @@
     <p>Sosiale medier inneholder sterke politiske meninger, så de inkluderes ikke</p>
   </div>
 </body>
+<script src="../js/master.js"></script>
 </html>
