Added work sites + Fred. Short readme guide

--- a/html/fredwork.html
+++ b/html/fredwork.html
@@ -18,7 +18,7 @@
 
       </div>
     </div>
-    <h1 class="textbase">Prosjektside</h1>
+    <h1 class="textbase">Fred</h1>
     <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
 
   </nav>
