--- a/html/gunnarwork.html
+++ b/html/gunnarwork.html
@@ -12,13 +12,12 @@
       <div class="dropdown-content primary-bg" style="margin-left: 3em;">
         <p><a href="./thomas.html"> Thomas</a></p>
         <p><a href="./kevin.html"> Kevin</a></p>
-        <p><a href="./fred.html"> Fred</a></p>
         <p><a href="./sebastian.html">Sebastian </a></p>
         <p><a href="./gunnar.html"> Gunnar</a></p>
 
       </div>
     </div>
-    <h1 class="textbase">Prosjektside</h1>
+    <h1 class="textbase">Gunnar</h1>
     <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
 
   </nav>
@@ -26,7 +25,8 @@
   </div>
   <div class="section">
     <div class="content-main">
-      <div class="cat">
+      <div class="cat container">
+          <p>Gunnar Lein Sandnes</p>
       </div>
     </div>
   </div>
