Added fred folder

--- a/fred/Fred.html
+++ b/fred/Fred.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="../css/master.css">
 	</head>
-	<body class="background" onkeypress="KeyPress(event)">
+	<body onkeypress="KeyPress(event)">
   <header>
   <div class="rekke">
 
