killed work + fred. prosjekt+main WIP

--- a/html/Kevin.html
+++ b/html/Kevin.html
@@ -2,97 +2,121 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Kevin</title>
+  <title></title>
   <link rel="stylesheet" href="../css/master.css">
-  <style>
-  .hei {
-    position: relative;
-    text-align: center;
-    background-color: black;
-  }
-
-  table{border: 3px solid darkred; font-size: 25px; width: 50%;}
-  td{border: 1px solid black; font-size: 25px;  }
-  li{font-size: 25px;}
-  </style>
 </head>
+<body class="background">
+  <nav class="navbar flex">
+    <div class="dropdown">
+      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./thomas.html"> Thomas</a></p>
+        <p><a href="./kevin.html"> Kevin</a></p>
+        <p><a href="./fred.html"> Fred</a></p>
+        <p><a href="./sebastian.html">Sebastian </a></p>
+        <p><a href="./gunnar.html"> Gunnar</a></p>
 
-
-<body style= "background-color: lightblue;">
-  <div><h1 style="color: darkred; font-size:70px" class="hei"> Kevin Eriksen </h1>
-    <p style= "color: darkred; font-size:35px;"> Litt info om meg selv, og livet i Førde: </p>
-    <p style="font-size:18px;  width: 50%;">
-      Heisann! Jeg er en gutt på 20 år som kommer fra Oslo og har nylig flyttet til Førde for å studere IT.
-      Jeg er 183cm høy, har blå øyne og blondt hår.
-      Bor nå i en studentbolig bestående av 10 hybler på 10m2. Her bor det altså 9 andre bavianer. Fullt kaos.
-      Før jeg kom hit tok jeg et friår hvor jeg hadde en midlertidig fast stilling som lagermedarbeider, fram til sommeren 2019.
-      I tillegg jobbet jeg deltid i helgene, både som kurs- og konferansevert og som servitør på Thon Hotel.</p>
-      <p  style="font-size:18px; width: 50%;">
-        Livet her i Førde har vært som en drøm så langt.
-        Det er et utrolig godt student-miljø her, noe som gjør at jeg trives utrolig godt.
-        Det er lett å få seg nye venner og sosiale arrangementer er det nok av.
-        Når det gjelder skolen så går det veldig greit.
-        Noen fag er så klart vanskeligere enn andre og tar lenger tid å komme inn i, men alt i alt så er det spennende å prøve seg på nye ting og artig når man får det til.
-        Gleder meg til tiden fremover om vi ser bort i fra klesvasken:D</p>
+      </div>
     </div>
-      <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
-      style="border: 15px solid black; position: absolute; height: 300px; width: 300px; right:9px; top:140px;">
-      <img alt="" src="https://cdn.calciomercato.com/images/2019-04/ronaldo.juve.ok.smorfia.2018.19.356x237.jpg"
-      style="border: 15px solid black; position: absolute; height: 220px; width: 220px; right:350px; top:630px;">
-      <br>
-      <h1 style= "color: darkred; font-size: 35px; "> Interesser: </h1>
+    <h1 class="textbase">Kevin</h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
 
-      <table>
+  </nav>
+  <div class="navbar-margin">
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <div><h1 style=" text-align: center; width: 50%; color: darkred; font-size:70px" class="hei"> Velkommen til nettsiden min.  </h1>
+          <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
+            style="border: 15px solid black; position: absolute; height:260px; width:260px; right:2px; top:100px;">
+            <img alt="" src="https://scontent.fsdn1-1.fna.fbcdn.net/v/t1.0-9/15285057_1127580624024866_9096345690314340933_n.jpg?_nc_cat=108&_nc_oc=AQk621LpJg5KdDoVo0nvIswMzNsnl5sY4CNBroeECVPPzyjk30i5vgaZwBjjpEgbCqk&_nc_ht=scontent.fsdn1-1.fna&oh=b77cb22f1b7ae3df247f8abca8813dc4&oe=5E2128CC"
+            style="border: 15px solid black; position: absolute; height:260px; width:260px; left:2px; top: 100px;">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <p style= "color: darkred; font-size:35px; top: 0px"> Litt info om meg selv, og livet i Førde: </p>
+        <p style="font-size:18px; top: 10px;">
+          Heisann! Jeg er en gutt på 20 år som kommer fra Oslo og har nylig flyttet til Førde for å studere IT.
+          Jeg er 183cm høy, har blå øyne og blondt hår.
+          Bor nå i en studentbolig bestående av 10 hybler på 10m2. Her bor det altså 9 andre bavianer. Fullt kaos.
+          Før jeg kom hit tok jeg et friår hvor jeg hadde en midlertidig fast stilling som lagermedarbeider, fram til sommeren 2019.
+          I tillegg jobbet jeg deltid i helgene, både som kurs- og konferansevert og som servitør på Thon Hotel.</p>
+          <p  style="font-size:18px; top: 10px;">
+            Livet her i Førde har vært som en drøm så langt.
+            Det er et utrolig godt student-miljø her, noe som gjør at jeg trives utrolig godt.
+            Det er lett å få seg nye venner og sosiale arrangementer er det nok av.
+            Når det gjelder skolen så går det veldig greit.
+            Noen fag er så klart vanskeligere enn andre og tar lenger tid å komme inn i, men alt i alt så er det spennende å prøve seg på nye ting og artig når man får det til.
+            Gleder meg til tiden fremover om vi ser bort i fra klesvasken:D</p>
+            <br>
+            <br>
+            <br>
+            <p style="font-size: 30px; top:0px; color: ">
+              Nedenfor ser dere en tabell som forteller litt mer om hva jeg liker. </p>
+
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+
+
+        <style>
+        table{border: 5px solid darkred; font-size: 25px; width: 100%;}
+        td{border: 1px solid black; font-size: 25px;  }
+        li{font-size: 25px;}
+        </style>
+        <table>
+          <tr>
+          <td> AKTIVITETER </td>
+          <td> MAT </td>
+          <td> FAGLIG </td>
+        </tr>
         <tr>
-        <td> AKTIVITETER </td>
-        <td> MAT </td>
-        <td> FAGLIG </td>
-      </tr>
-      <tr>
-        <td> 1. Fotball </td>
-        <td> 1. Taco </td>
-        <td> 1. IT </td>
-      </tr>
-      <tr>
-        <td> 2. Basketball </td>
-        <td> 2. Pizza </td>
-        <td> 2. Mattematikk </td>
-      </tr>
-      <tr>
-        <td> 3. Turn </td>
-        <td> 3. Sjømat </td>
-        <td> 3. Økonomi </td>
-      </tr>
-      <tr>
-        <td> 4. Friidrett </td>
-        <td> 4. Pasta </td>
-        <td> 4. Biologi </td>
-      </tr>
-      <tr>
-        <td> 5. Svømming </td>
-        <td> 5. Tandori </td>
-        <td> 5. Gym
-        </table>
-        <br>
-        <br>
-        <p style= "color:darkred; font-size:35px;"> Viktige ting jeg har i hybelen: </p>
-        <ul>
-          <li> Bad </li>
-          <li> Seng </li>
-          <li> Klesskap </li>
-          <li> Kommode </li>
-          <li> Pult </li>
-          <li> Hyller </li>
-          <li> Playstation </li>
-          <li> Varmeovn </li>
-          <li> Skittentøyskurv </li>
-          <li> Søplekasse </li>
-        </ul>
-
+          <td> 1. Fotball </td>
+          <td> 1. Taco </td>
+          <td> 1. IT </td>
+        </tr>
+        <tr>
+          <td> 2. Basketball </td>
+          <td> 2. Pizza </td>
+          <td> 2. Mattematikk </td>
+        </tr>
+        <tr>
+          <td> 3. Turn </td>
+          <td> 3. Sjømat </td>
+          <td> 3. Økonomi </td>
+        </tr>
+        <tr>
+          <td> 4. Friidrett </td>
+          <td> 4. Pasta </td>
+          <td> 4. Biologi </td>
+        </tr>
+        <tr>
+          <td> 5. Svømming </td>
+          <td> 5. Tandori </td>
+          <td> 5. Gym
+          </table>
           <br>
-          <br>
-          <p> <a href="main.html"> Tilbake til Main</a> </p>
+        <p style="font-size: 18px; "> Lurer dere på noe mer, ta kontakt da vel ----> <a href="https://www.facebook.com/kevin.eriksen.399"> Min facebook profil..</a> </p>
 
-        </body>
-        <script src="../js/master.js"></script>
-        </html>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+
+
+      </div>
+    </div>
+  </div>
+</body>
+<script src="../js/master.js"></script>
+</html>
