--- a/html/Sebastian.html
+++ b/html/Sebastian.html
@@ -1,23 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/master.css">
-  </head>
-  <body>
-    <h1>Hei mitt navn er Sebastian Bjoland</h1>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="../css/master.css">
+</head>
+<body class="background">
+  <nav class="navbar flex">
+    <div class="dropdown">
+      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./thomas.html"> Thomas</a></p>
+        <p><a href="./kevin.html"> Kevin</a></p>
+        <p><a href="./fred.html"> Fred</a></p>
+        <p><a href="./sebastianwork.html">Sebastian </a></p>
+        <p><a href="./gunnar.html"> Gunnar</a></p>
 
-    <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18157635_451948048492139_7961193018346921842_n.jpg?_nc_cat=104&_nc_oc=AQmn7GEvxe6vNrJUe7vDQEVeQUL9cx2JaxTncAtbwU6_2Ov7yGDPj-_j4_TqGjtCjI0&_nc_ht=scontent-arn2-1.xx&oh=e54feeb2c4621c679669d428ec3d1a2b&oe=5DCDB58C" alt="Meg" id="bilde1">
+      </div>
+    </div>
+    <h1 class="textbase">Sebastian</h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
 
-  <table style="width:50%">
+  </nav>
+  <div class="navbar-margin">
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/54222376_1138687156297782_8218474351016542208_n.jpg?_nc_cat=110&_nc_oc=AQkUq2V0y9JXT4yFdZ_7Z0SPIMwbBm5uRm5ARAHJUV7cDSNlpvajdM3NQWdj5etdNd0&_nc_ht=scontent-arn2-1.xx&oh=5fb3a36844b4e5654851e19977de8f29&oe=5DEF9BF6" alt="Meg" width="40%">
+        <table>
+          <tr>
+            <td>20 år</td>
+          </tr>
+          <tr>
+            <td>Er fra Bergen</td>
+          </tr>
+          <tr>
+            <td>Du kan få tak i meg på denne linken</td>
+          </tr>
+          <tr>
+            <td><a href="https://www.facebook.com/profile.php?id=100010308436448">facebook.com</td>
+          </tr>
 
-  <td>20 år </td>
-  <td>Er fra Bergen</td>
-  <td>Du kan få tak i meg på denne linken</td>
-  <td> <a href="https://www.facebook.com/profile.php?id=100010308436448"> facebook.com</td>
+      </table>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
 
-</table>
-
-  </body>
-  <script src="../js/master.js"></script>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
+</body>
+<script src="../js/master.js"></script>
 </html>
