--- a/html/Thomas.html
+++ b/html/Thomas.html
@@ -1,30 +1,69 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Han smarte fyren</title>
-    <link rel="stylesheet" href="../css/master.css">
-    <style media="screen">
-      li{
-        font-size: 30px;
-        color: red;
-      }
-    </style>
-  </head>
-  <body style ="background-color:yellow;">
-    <h1 style="color:blue;text-align:center;font-size: 70px">Thomas Kopperud</h1>
-    <h2 style= "font-size: 50px">Litt om Thomas:</h2>
-    <ul>
-      <li>Er fra Os, Hordaland</li>
-      <li>Er 23 år</li>
-      <li>Liker å være i aktivitet, blant annet å spille fotball</li>
-      <li>Elsker programmering</li>
-      </ul>
-      <img src="https://i.imgur.com/rmqEMrM.jpg" alt=""
-      style="position: absolute; height: 200px; width: 290px; right: 70px; bottom: 200px;">
-      <p style="font-size: 18px">Om du ønsker å kontakte Thomas så kan du trykke på linken under:</p>
-      <a href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Facebook</a>
-      <p> <a href="main.html">Tilbake til startsiden</a></p>
-  </body>
-  <script src="../js/master.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="../css/master.css">
+</head>
+<body class="background">
+  <nav class="navbar flex">
+    <div class="dropdown">
+      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./thomas.html"> Thomas</a></p>
+        <p><a href="./kevin.html"> Kevin</a></p>
+        <p><a href="./fred.html"> Fred</a></p>
+        <p><a href="./sebastian.html">Sebastian </a></p>
+        <p><a href="./gunnar.html"> Gunnar</a></p>
+
+      </div>
+    </div>
+    <h1 class="textbase">Thomas</h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
+
+  </nav>
+  <div class="navbar-margin">
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <h1 style="color:blue;text-align:center;font-size: 70px">Thomas Kopperud</h1>
+        <img src="https://i.imgur.com/rmqEMrM.jpg" alt=""
+        style="position: absolute; height: 200px; width: 290px; right: 70px; bottom: 270px;">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+
+        <h1 style= "font-size: 24px">Jeg er 23 år og kommer fra Os,Hordaland.</h1>
+        <h1 style= "font-size: 24px">Jeg er student på Hvl, campus Førde og studere Informasjonsteknologi.</h1>
+        <h1 style= "font-size: 24px">Studentsamfunnet her i Førde er veldig bra. Her er det masse sosiale arrangementer som alle kan være med på.</h1>
+        <h1 style= "font-size: 24px">Dette er alt i fra fotball i Førdehuset, volleyball og klatring i Sunnfjordhallen eller quiz på Akutten.</h1>
+        <h1 style= "font-size: 24px">På fritiden min liker jeg være i aktivetet, blant anna spille fotball eller trene styrke.</h1>
+
+
+
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <a href="https://www.facebook.com/thomas.kopperud.5">Trykk her for Thomas sin Facebook. </a>
+        <a href="main.html">Trykk her for å komme tilbake til startsiden. </a>
+
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+
+      </div>
+    </div>
+  </div>
+</body>
+<script src="../js/master.js"></script>
 </html>
