--- a/html/gunnar.html
+++ b/html/gunnar.html
@@ -2,42 +2,75 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Gunnar</title>
+  <title></title>
   <link rel="stylesheet" href="../css/master.css">
 </head>
-<body class="background main viewport">
-<nav class="navbar">
-  <h1 class="info"> <strong id="hover"> Gunnar Lein Sandnes </strong></h1>
-</nav>
-  <div class="air-r-05">
-    <button type="button" name="knapp1" style="float: right;" onclick="window.location.href='./main.html'" >Tilbake til main</button>
+<body class="background">
+  <nav class="navbar flex">
+    <div class="dropdown">
+      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./thomas.html"> Thomas</a></p>
+        <p><a href="./kevin.html"> Kevin</a></p>
+        <p><a href="./fred.html"> Fred</a></p>
+        <p><a href="./sebastian.html">Sebastian </a></p>
+        <p><a href="./gunnar.html"> Gunnar</a></p>
+
+      </div>
+    </div>
+    <h1 class="textbase">Gunnar</h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
+
+  </nav>
+  <div class="navbar-margin">
   </div>
-  <br>
-  <br>
-  <div class="air-r-05 shadow ">
-    <img title="Liker å gjemme easter eggs" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 200px; float: right" alt="Personbilde" />
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <h1 class="warning">Gunnar Lein Sandnes</h1>
+        <img class="border-01-solid" title="Liker å gjemme easter eggs" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/284867_462771853754449_800104360_n.jpg?_nc_cat=110&_nc_oc=AQkSH-G1aqeeeGZqQnKSG6PGlFYUAk8pDUB8gid9PyAUgLm5YgqRItSY_yn6RTElvIc&_nc_ht=scontent-arn2-1.xx&oh=6a3519e472b8b30d3ec16aad9f0bdbed&oe=5E02E4D5" style="height: 300px; float: right" alt="Personbilde" />
+      </div>
+    </div>
   </div>
-    <h1><strong>Om meg</strong></h1>
-    <ul>
-      <li>26</li>
-      <li>Snåsning</li>
-      <li>Informasjonsteknologi ved HVL-F</li>
-      <li>Frontend erfaring</li>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Phoenix</li>
-        <li>ECTO</li>
-        <li>GIT</li>
-      </ul>
-      <li>Liker å krangle på navnekonvensjoner og enkle metoder</li>
-      <li>Databaseallergi</li>
-      <li>Hobby-troubleshooter</li>
-      <li>Tidligere musiker (forklarer håret)</li>
-      <li style="color: #F0F0F0"> Lat som få</li>
-    </ul>
-  <div class="textbase">
-    <p>Sosiale medier inneholder sterke politiske meninger, så de inkluderes ikke</p>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat" style="margin-top: 5rem;">
+        <img src="https://i.imgur.com/p9W4tR0.png" class="border-01-solid" alt="img01" style="height: 300px; float: left">
+
+        <h1 class="info"><strong>Om meg</strong></h1>
+        <div class=" flex-around">
+        <ul>
+          <li>26</li>
+          <li>Snåsning</li>
+          <li>Informasjonsteknologi ved HVL-F</li>
+          <li>Frontend erfaring</li>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Phoenix</li>
+            <li>ECTO</li>
+            <li>GIT</li>
+          </ul>
+          <li>Liker å krangle på navnekonvensjoner og enkle metoder</li>
+          <li>Hobby-troubleshooter</li>
+          <li>Tidligere musiker (forklarer håret)</li>
+          <li style="color: #F0F0F0"> Lat som få</li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
   </div>
 </body>
 <script src="../js/master.js"></script>
