--- a/html/main.html
+++ b/html/main.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/master.css">
-    <title>main</title>
-    	<style>
-        Body {background-color: black; }
-        h1 {color: pink; text-align:center;	}
-        p {color: red; text-align: center; font-family: "Courier";}
-        img {text-align: center; }
-        </style>
-  </head>
-  <body>
-<h1> Prosjekt gruppe 1 </h1>
-<p> Gunnar </p>
-<p> Thomas </p>
-<p> Kevin </p>
-<p> Sebastian </p>
-<p> Velkommen til prosjekt gruppe 1, bestående av 4 studenter fra Campus Førde. Her ser du bilder av alle oss som dere kan klikke dere inn på for mer informasjon om hver enkelt.
-	<br>
-  <a target="_blank" href="gunnar.html"><img alt="" style="height: 200px; width: 150px" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/564340_462770663754568_750633099_n.jpg?_nc_cat=110&_nc_oc=AQnjSNlpacWZ1nmf8uWWLps1KZHO08C9dcluCaNoJbMoJaqvx9j5dpE5b3pPF0ga3Lk&_nc_ht=scontent-arn2-1.xx&oh=5d89041584d9c33226e2dabda3259988&oe=5E11CB65"></a>
-  <a href="Sebastian.html"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/18157635_451948048492139_7961193018346921842_n.jpg?_nc_cat=104&_nc_oc=AQmn7GEvxe6vNrJUe7vDQEVeQUL9cx2JaxTncAtbwU6_2Ov7yGDPj-_j4_TqGjtCjI0&_nc_ht=scontent-arn2-1.xx&oh=e54feeb2c4621c679669d428ec3d1a2b&oe=5DCDB58C" style="height: 200px; width: 200px;"> </a>
-  <br>
-<a target="_blank" href="file:///Users/kevineriksen/Downloads/Thomas%20(1).html"> <img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.15752-9/69873306_485105928975831_2105212730196623360_n.jpg?_nc_cat=105&_nc_oc=AQkenUIoparvwcOtPSMQAvv-uSp9hbW1AieJtquOzZ7chKDHRTkDYkmH2IyAlkrV2fo&_nc_ht=scontent-arn2-1.xx&oh=391b60f633059d54c629753d7a7ebae3&oe=5DCDF045"
-	style="height: 200px; width: 150px"> </a>
-<a target="_blank" href="Kevin.html"><img alt="" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/30704260_1486345074827687_5467217666325187371_n.jpg?_nc_cat=111&_nc_oc=AQmQ6QF6nWLRN-H6v_87OlFC5_60re2P7P1WzM1JqArqrTTSJUvt4PKZVtsaswedVbw&_nc_ht=scontent-arn2-1.xx&oh=1e8396c41bcc68a917731569298517c3&oe=5E15168E"
-	style="height: 200px; width: 200px;"> </a>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="../css/master.css">
+</head>
+<body class="background">
+  <!-- navbar start  do not touch-->
+  <nav class="navbar flex">
+    <div class="dropdown">
+      <h1 class=" textbase" style="margin-left: 3em;">Medlemmer</h1>
+      <div class="dropdown-content primary-bg" style="margin-left: 3em;">
+        <p><a href="./thomas.html"> Thomas</a></p>
+        <p><a href="./kevin.html"> Kevin</a></p>
+        <p><a href="./fred.html"> Fred</a></p>
+        <p><a href="./sebastian.html">Sebastian </a></p>
+        <p><a href="./gunnar.html"> Gunnar</a></p>
+      </div>
+    </div>
+    <h1 class="textbase">WIP</h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
+  </nav>
+  <div class="navbar-margin">
+  </div>
+  <!-- navbar end -->
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+        <h1 style="font-size: 7rem;"> <strong>WIP</strong> </h1>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="content-main">
+      <div class="cat">
+      </div>
+    </div>
+  </div>
 </body>
 <script src="../js/master.js"></script>
 </html>
