--- a/html/prosjekt.html
+++ b/html/prosjekt.html
@@ -18,7 +18,7 @@
         <p><a href="./gunnar.html"> Gunnar</a></p>
       </div>
     </div>
-    <h1 class="textbase">Prosjektside</h1>
+    <h1 class="textbase">WIP</h1>
     <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
   </nav>
   <div class="navbar-margin">
@@ -27,6 +27,7 @@
   <div class="section">
     <div class="content-main">
       <div class="cat">
+        <h1 style="font-size: 7rem;"> <strong>WIP</strong> </h1>
       </div>
     </div>
   </div>
