--- a/html/main.html
+++ b/html/main.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <h1 class="textbase">WIP</h1>
-    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html"> Main</a> </h1>
+    <h1 class="textbase" style="margin-right: 5em;">  <a href="./main.html" id="hover"> Main</a> </h1>
   </nav>
   <div class="navbar-margin">
   </div>
